--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fruit Basket Game</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -14,6 +20,9 @@
         <img src="picnic-basket.png" alt="basket" />
       </div>
     </div>
+
+    <button class="btn btn-primary left"><</button>
+    <button class="btn btn-primary right">></button>
     <object data="music.mp3" type="audio/wav" autostart="true"></object>
     <script src="script.js"></script>
   </body>
