--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
       </div>
     </div>
 
-    <button class="btn btn-primary left"><</button>
-    <button class="btn btn-primary right">></button>
+    <input type="range" min="0" max="450" value="5" />
     <object data="music.mp3" type="audio/wav" autostart="true"></object>
     <script src="script.js"></script>
   </body>
