--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="result">0</div>
     <div class="container">
       <div class="basket">
         <img src="picnic-basket.png" alt="basket" />
       </div>
     </div>
-
     <input type="range" min="0" max="450" value="5" />
+
+    <div class="message">Score</div>
+    <div class="result">0</div>
     <object data="music.mp3" type="audio/wav" autostart="true"></object>
     <script src="script.js"></script>
   </body>
