--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
     <div class="message">Score</div>
     <div class="result">0</div>
+    <div class="opportunity">10</div>
     <object data="music.mp3" type="audio/wav" autostart="true"></object>
     <script src="script.js"></script>
   </body>
