--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <body>
     <div class="container">
       <div class="basket">
+        <button class="btn btn-primary">START</button>
         <img src="picnic-basket.png" alt="basket" />
       </div>
     </div>
